tests/valid/entity_only.intent
module EntityOnly

entity User {
  id: UUID
  name: String
  email: Email
  active: Bool
}
