tests/invalid/bad_type.intent
module BadType

entity Thing {
  name: lowercase_type
}
